# python-outbox-microservice

./: .gitignore  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
.github/workflows/: ai-review-rules.yml  main.yml
app/: database.py  db.py  main.py  models.py  worker.py
dockerfiles/: python
tests/: test_adjust_inventory.sh  test_create_order.sh  test_get_event.sh  test_list_events.sh
