[project]
name = "python-outbox-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.2",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["dockerfiles*"]
